<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/chatgraident"
    android:paddingStart="10dp"
    android:paddingEnd="10dp">

    <TextView
        android:id="@+id/Commentusername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="28dp"
        android:background="#FBFBFC"
        android:padding="3dp"
        android:text="@string/panni"
        android:textSize="22sp"
        android:textStyle="normal|bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/CommentDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:background="#B8D9EB"
        android:text="@string/_23_july_2020"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/Commentusername"
        app:layout_constraintStart_toEndOf="@+id/Commentusername"
        app:layout_constraintTop_toTopOf="@+id/Commentusername" />

    <TextView
        android:id="@+id/Commentfield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="25dp"
        android:background="#E9F3FE"
        android:padding="5dp"
        android:text="@string/data_feched_from_firestore"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Commentusername" />

    <ImageView
        android:id="@+id/showimagemsgs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/chatgraident"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Commentfield"
        app:srcCompat="@drawable/big_add" />

</androidx.constraintlayout.widget.ConstraintLayout>