<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginprogress"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mustlibunsplash"
    tools:context=".LoginActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />


    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/loginemail"
        android:layout_width="358dp"
        android:layout_height="51dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="6dp"
        android:autofillHints=""
        android:background="@drawable/buttonshapes"
        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintCircleRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="358dp"
        android:layout_height="54dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="6dp"
        android:autofillHints=""
        android:background="@drawable/buttonshapes"
        android:ems="10"
        android:hint="@string/enter_passward"
        android:inputType="textPassword"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginemail" />

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="110dp"
        android:layout_height="45dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/buttonscorners"
        android:onClick="LOGINUSER"
        android:text="@string/login"
        android:textColor="#FBF5F5"
        android:textColorHighlight="#FFFEFE"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/forgetpasswardbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPassword" />

    <Button
        android:id="@+id/forgetpasswardbtn"
        android:layout_width="110dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/buttonscorners"
        android:text="@string/forget_passward"
        android:textColor="#FBF5F5"
        android:textColorHighlight="#FFFEFE"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/loginbtn"
        app:layout_constraintTop_toBottomOf="@+id/loginPassword" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="95dp"
        android:text="@string/or_create_account"
        android:textColor="#FFF"
        android:textColorLink="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginbtn" />

    <Button
        android:id="@+id/createuserbtn"
        android:layout_width="110dp"
        android:layout_height="45dp"
        android:layout_marginStart="145dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="145dp"
        android:background="@drawable/buttonscorners"
        android:onClick="CREateUSER"
        android:text="@string/createuser"
        android:textColor="#FFFEFE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/logintimmer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/_2"
        android:textColor="#FFFFFF"
        android:textSize="100sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createuserbtn" />

</androidx.constraintlayout.widget.ConstraintLayout>