<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parentlayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/gridrentbackground"
    android:padding="5dp">

    <TextView
        android:id="@+id/List_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:background="#FFFFFF"
        android:gravity="center_horizontal"
        android:hint="@string/Username"
        android:padding="5dp"
        android:textColorHint="#392A2A"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/Date_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="175dp"
        android:hint="@string/_07_10_2020"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/List_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/List_username"
        app:layout_constraintTop_toTopOf="@+id/List_username" />

    <TextView
        android:id="@+id/question_text_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="120dp"
        android:background="#FFFFFF"
        android:gravity="center_horizontal"
        android:hint="@string/feched_question"
        android:padding="5dp"
        android:textColorHint="#403535"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Subject" />

    <ImageView
        android:id="@+id/question_list_image"
        android:layout_width="386dp"
        android:layout_height="278dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_text_list"
        app:srcCompat="@drawable/big_add" />

    <ImageView
        android:id="@+id/Star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/todo"
        android:defaultFocusHighlightEnabled="true"
        app:layout_constraintEnd_toStartOf="@+id/NO_Likes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_list_image"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <TextView
        android:id="@+id/NO_Likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="288dp"
        android:hint="@string/_100"
        android:textColorHint="#6F5E5E"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/Star"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Star"
        app:layout_constraintTop_toTopOf="@+id/Star" />

    <ImageView
        android:id="@+id/CommentsView"
        android:layout_width="39dp"
        android:layout_height="28dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="19dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toStartOf="@+id/NUM_commentsview"
        app:layout_constraintHorizontal_bias="0.291"
        app:layout_constraintStart_toEndOf="@+id/NO_Likes"
        app:layout_constraintTop_toBottomOf="@+id/question_list_image"
        app:srcCompat="@drawable/big_add" />

    <TextView
        android:id="@+id/NUM_commentsview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text="@string/_100"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/CommentsView"
        app:layout_constraintStart_toEndOf="@+id/CommentsView"
        app:layout_constraintTop_toTopOf="@+id/CommentsView" />

    <TextView
        android:id="@+id/Subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        android:gravity="center_horizontal"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/enter_subject"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Date_text" />

    <ImageButton
        android:id="@+id/sharebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_list_image"
        app:srcCompat="@drawable/ic_baseline_share_24" />

</androidx.constraintlayout.widget.ConstraintLayout>